<resources>
    <string name="app_name">Translate</string>
    <string-array name="country_name">
        <item>Tiếng Việt</item>
        <item>Tiếng Anh</item>
        <item>Tiếng Trung</item>
        <item>Tiếng Nhật</item>
    </string-array>
    <string name="hintAnh">Chọn ảnh</string>
    <string name="hintXuat">Xuất văn bản</string>
    <string name="hintDich">Dịch </string>
    <string name="hintCaidat">Cài đặt</string>
    <string name="hintGioithieu">GIỚI THIỆU</string>
    <string name="hintPhanhoi">PHẢN HỒI</string>
    <string name="hintTrogiup">TRỢ GIÚP</string>
    <string name="hintXoa">XÓA LỊCH SỬ DỊCH</string>
    <string name="hintNhapvanban">Nhập văn bản</string>
    <string name="hintVanban">Văn bản</string>
    <string name="hintLanguage">Chọn ngôn ngữ</string>
    <string name="hintTrangchu">Trang chủ</string>
    <string name="hintfb1">Cảm ơn bạn đã sử dụng ứng dụng \ncủa chúng tôi. \nMọi ý kiến đóng góp xin liên hệ:</string>
    <string name="hintfb2">Mr. Vu Hong Phu \nMr. Ho Duc Thanh \nMr. Nguyen Tuan Vuong</string>
</resources>
