<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.SettingActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="#fff"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/hintCaidat"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColorHint="#000000"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="635dp"
            android:layout_marginTop="46dp"
            android:background="#f2f2f2"
            android:orientation="vertical"
            >
            <Button
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="120dp"
                android:id="@+id/button_about"
                android:background="#fff"
                android:hint="@string/hintGioithieu"
                android:textSize="20dp"
                android:textColorHint="#000000"/>
            <Button
                android:id="@+id/button_feedback"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="120dp"
                android:background="#fff"
                android:hint="@string/hintPhanhoi"
                android:textSize="20dp"
                android:textColorHint="#000000"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="677dp"
            android:background="#ffffff"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/button_home2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/home" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintTrangchu"
                    android:textColorHint="#757575"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="92dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/button_translate2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/translate2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintDich"
                    android:textColorHint="#757575"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/button_setting2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/settings1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintCaidat"
                    android:textColorHint="#2196f3"/>
            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

</LinearLayout>